# osgleap

./: CMakeLists.txt  ProjectHome.md  README.txt  ToDo.md
CMakeModules/: FindLeapSDK.cmake
examples/example_leapdemo/: CMakeLists.txt  demo.cpp
examples/example_leaporbit/: leaporbit.cpp
examples/example_leappointer/: CMakeLists.txt  leappointer.cpp
include/osgLeap/: Controller  Device  Export  HUDCamera  HandState  IntersectionController  IntersectionDevice  IntersectionUpdateCallback  LeapManipulator  Listener  OrbitManipulator  Pointer  PointerEventDevice  PointerGraphicsUpdateCallback
src/osgLeap/: CMakeLists.txt  Controller.cpp  Device.cpp  HUDCamera.cpp  HandState.cpp  IntersectionController.cpp  IntersectionDevice.cpp  IntersectionUpdateCallback.cpp  LeapManipulator.cpp  OrbitManipulator.cpp  PointerEventDevice.cpp  PointerPositionListener.cpp
tags/osgLeap-0.1.0/: README.txt
tags/osgLeap-0.1.0/CMakeModules/: FindOSG.cmake
tags/osgLeap-0.1.0/src/osgLeap/: LeapManipulator.cpp
tags/osgLeap-0.1.1/CMakeModules/: FindLeapSDK.cmake
tags/osgLeap-0.1.1/src/osgLeap/: CMakeLists.txt  LeapManipulator.cpp
tags/osgLeap-0.1.2/: CMakeLists.txt
tags/osgLeap-0.1.2/CMakeModules/: FindLeapSDK.cmake  OsgMacroUtils.cmake
tags/osgLeap-0.1.2/examples/example_leapdemo/: demo.cpp
tags/osgLeap-0.1.2/include/osgLeap/: Controller  Export  Listener
tags/osgLeap-0.1.2/src/osgLeap/: CMakeLists.txt  LeapManipulator.cpp
tags/osgLeap-0.3.0/examples/example_leaporbit/: CMakeLists.txt  leaporbit.cpp
tags/osgLeap-0.3.0/include/osgLeap/: OrbitManipulator  PointerPositionListener
tags/osgLeap-0.3.0/src/osgLeap/: HandState.cpp  OrbitManipulator.cpp  PointerEventDevice.cpp  PointerPositionListener.cpp
tags/osgLeap-0.5.0/: CMakeLists.txt  README.txt
tags/osgLeap-0.5.0/CMakeModules/: ModuleInstall.cmake
tags/osgLeap-0.5.0/examples/example_leaporbit/: leaporbit.cpp
tags/osgLeap-0.5.0/examples/example_leappointer/: leappointer.cpp
tags/osgLeap-0.5.0/include/osgLeap/: Event  PointerGraphicsUpdateCallback
tags/osgLeap-0.5.0/src/: CMakeLists.txt
tags/osgLeap-0.5.0/src/osgLeap/: HUDCamera.cpp  HandState.cpp  PointerEventDevice.cpp
tags/osgLeap-0.5.1/: CMakeLists.txt
tags/osgLeap-0.5.1/CMakeModules/: FindLeapSDK.cmake  FindosgLeap.cmake
tags/osgLeap-0.5.1/examples/example_leappointer/: leappointer.cpp
tags/osgLeap-0.5.1/include/osgLeap/: HUDCamera  HandState  PointerEventDevice  PointerPositionListener
tags/osgLeap-0.5.1/src/osgLeap/: HUDCamera.cpp  OrbitManipulator.cpp  PointerEventDevice.cpp
trunk/: CMakeLists.txt  README.txt
trunk/CMakeModules/: OsgMacroUtils.cmake
trunk/examples/: CMakeLists.txt
trunk/examples/example_demo/: CMakeLists.txt  demo.cpp
trunk/examples/example_leapdemo/: CMakeLists.txt  demo.cpp
trunk/examples/example_leaporbit/: leaporbit.cpp
trunk/examples/example_leappointer/: leappointer.cpp
trunk/include/osgLeap/: Controller  Device  Export  HUDCamera  HandState  IntersectionController  IntersectionDevice  IntersectionUpdateCallback  LeapManipulator  Listener  OrbitManipulator  Pointer  PointerEventDevice  PointerGraphicsUpdateCallback  PointerPositionListener
trunk/src/osgLeap/: CMakeLists.txt  Controller.cpp  HandState.cpp  IntersectionController.cpp  IntersectionDevice.cpp  IntersectionUpdateCallback.cpp  LeapManipulator.cpp  OrbitManipulator.cpp  PointerEventDevice.cpp  PointerGraphicsUpdateCallback.cpp  PointerPositionListener.cpp
wiki/: ToDo.wiki
