SET(TARGET_SRC leappointer.cpp )

FIND_PACKAGE(osg)
FIND_PACKAGE(osgDB)
FIND_PACKAGE(osgText)
FIND_PACKAGE(osgUtil)
FIND_PACKAGE(osgViewer)
FIND_PACKAGE(osgWidget)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LEAP_INCLUDE_DIR})

SET(TARGET_COMMON_LIBRARIES
	${TARGET_COMMON_LIBRARIES}
	osgLeap
	)
	
SET(TARGET_LIBRARIES_VARS
	LEAP_LIBRARY
	OSGDB_LIBRARY
	OSGUTIL_LIBRARY
	OSGVIEWER_LIBRARY
	OSGTEXT_LIBRARY
	OSGWIDGET_LIBRARY
	)

SETUP_EXAMPLE(leappointer)
