IF   (OSGLEAP_BUILD_SHARED_LIBS)
    ADD_DEFINITIONS(-DOSGLEAP_LIBRARY)
ELSE (DYNAMIC_OPENSCENEGRAPH)
    ADD_DEFINITIONS(-DOSGLEAP_LIBRARY_STATIC)
ENDIF(OSGLEAP_BUILD_SHARED_LIBS)

FIND_PACKAGE(LeapSDK)
SET(LIB_NAME osgLeap)
ADD_DEFINITIONS(-DDACVRPN_LIBRARY)

SET(HEADER_PATH ${CMAKE_SOURCE_DIR}/include/${LIB_NAME})
INCLUDE_DIRECTORIES(${LEAP_INCLUDE_DIR})

SET(TARGET_H
    ${HEADER_PATH}/Export
    ${HEADER_PATH}/LeapManipulator
)

SET(TARGET_SRC
    LeapManipulator.cpp
)

SET(TARGET_LIBRARIES_VARS
	OSG_LIBRARY
	OSGGA_LIBRARY
	OPENTHREADS_LIBRARY
    LEAP_LIBRARY
)
SETUP_LIBRARY(${LIB_NAME})

