SET(TARGET_SRC demo.cpp )

FIND_PACKAGE(osg)
FIND_PACKAGE(osgDB)
FIND_PACKAGE(osgUtil)
FIND_PACKAGE(osgViewer)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LEAP_INCLUDE_DIR})

SET(TARGET_COMMON_LIBRARIES
	${TARGET_COMMON_LIBRARIES}
	osgLeap
	)
	
SET(TARGET_LIBRARIES_VARS
	LEAP_LIBRARY
	OSGDB_LIBRARY
	OSGUTIL_LIBRARY
	OSGVIEWER_LIBRARY
	)

SETUP_EXAMPLE(leapdemo)
